# todo-cli

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DB_DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  RELEASE.md  config.example.toml  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-clipboard-support/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
scripts/: install-binary.sh  install.sh
skills/todo-mcp/: SKILL.md
src/: cli.rs  clipboard.rs  config.rs  lib.rs  main.rs
src/app/: event.rs  mod.rs  mode.rs  state.rs
src/keybindings/: mod.rs
src/mcp/: errors.rs  mod.rs  schemas.rs  server.rs
src/plugin/: mod.rs  subprocess.rs
src/plugin/generators/: jira_claude.rs  mod.rs
src/storage/: database.rs  file.rs  markdown.rs  mod.rs  rollover.rs
src/todo/: hierarchy.rs  item.rs  list.rs  mod.rs  state.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: mod.rs  status_bar.rs  todo_list.rs
src/utils/: paths.rs  unicode.rs
