[package]
name = "to-tui"
version = "0.2.3"
edition = "2024"

[lib]
name = "to_tui"
path = "src/lib.rs"

[[bin]]
name = "totui"
path = "src/main.rs"

[[bin]]
name = "totui-mcp"
path = "src/bin/totui-mcp.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
arboard = { version = "3.6", features = ["wayland-data-control"] }
dirs = "6.0"
rusqlite = { version = "0.38", features = ["bundled"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8.2.0"
dialoguer = "0.11"
unicode-width = "0.2"
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1"

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
